--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -1,8 +1,12 @@
 .button {
-  /* box-sizing: border-box;*/
-
   width: 70px;
   height: 70px;
+  transition: transform $hover-duration;
+
+  &:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+  }
 
   @media screen and (max-width: 320px) {
     width: 50px;
