--- a/src/styles/_contacts.scss
+++ b/src/styles/_contacts.scss
@@ -10,6 +10,15 @@
   line-height: 21px;
   white-space: nowrap;
 
+  @media screen and (max-width: 320px) {
+    width: 130px;
+
+    position: absolute;
+    top: 150px;
+    left: 170px;
+    white-space: normal;
+  }
+
   &::after {
     content: "";
     width: 1px;
@@ -19,5 +28,20 @@
     left: #{2 * $grid-gap + 2.5 * $grid-column};
 
     background-color: rgba(26, 90, 76, 0.5);
+
+    @media screen and (max-width: 768px) {
+      height: 460px;
+      top: 125px;
+      left: -12px;
+      transform: rotate(-90deg);
+    }
+
+    @media screen and (max-width: 320px) {
+      top: 260px;
+    }
+
+    @media screen and (min-width: 1920px) {
+      left: 285px;
+    }
   }
 }
