--- a/src/styles/_exhibition.scss
+++ b/src/styles/_exhibition.scss
@@ -40,11 +40,11 @@
   }
 
   &__block--left {
-    grid-template-columns: 670px 370px; /*????*/
+    grid-template-columns: 670px 370px;
     padding-bottom: 100px;
 
     @media screen and (min-width: 1920px) {
-      grid-template-columns: 870px 370px; /*????*/
+      grid-template-columns: 870px 370px;
     }
 
     @media screen and (max-width: 768px) {
@@ -53,11 +53,11 @@
   }
 
   &__block--right {
-    grid-template-columns: 370px 670px; /*????*/
+    grid-template-columns: 370px 670px;
     margin-bottom: 100px;
 
     @media screen and (min-width: 1920px) {
-      grid-template-columns: 370px 870px; /*????*/
+      grid-template-columns: 370px 870px;
       padding-left: 200px;
     }
 
