--- a/src/styles/_copyrights.scss
+++ b/src/styles/_copyrights.scss
@@ -17,4 +17,27 @@
     padding: 0 176px 35px;
   }
 
+  @media screen and (max-width: 768px) {
+    position: relative;
+    top: 230px;
+  }
+
+  @media screen and (max-width: 320px) {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  &__date {
+    @media screen and (max-width: 320px) {
+      order: 2;
+      text-align: center;
+    }
+  }
+
+  &__name {
+    @media screen and (max-width: 320px) {
+      text-align: center;
+    }
+  }
+
 }
