--- a/src/styles/_logo.scss
+++ b/src/styles/_logo.scss
@@ -3,6 +3,15 @@
   display: flex;
   justify-content: space-between;
 
+  @media screen and (max-width: 768px) {
+    width: 100px;
+    padding-right: 35px;
+  }
+
+  @media screen and (max-width: 320px) {
+    gap: 30px;
+  }
+
   &__facebook {
     height: 24px;
   }
