--- a/src/styles/_photos.scss
+++ b/src/styles/_photos.scss
@@ -39,7 +39,7 @@
   &__img {
     object-fit: cover;
     object-position: center;
-    transition: box-shadow 0.2s;
+    transition: box-shadow $hover-duration;
 
     &:hover {
       box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.25);
@@ -75,7 +75,6 @@
     @media screen and (max-width: 768px) {
       height: 543px;
       object-fit: contain;
-      /*margin-bottom: 0;*/
     }
 
     @media screen and (max-width: 320px) {
