--- a/src/styles/_schedule.scss
+++ b/src/styles/_schedule.scss
@@ -7,7 +7,13 @@
   font-weight: 400;
   line-height: 21px;
 
-  &__week {
-    white-space: nowrap;
+  @media screen and (max-width: 320px) {
+    width: calc(100vw - 100px);
+  }
+
+  @media screen and (min-width: 768px) {
+    &__week {
+      white-space: nowrap;
+    }
   }
 }
