--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -6,9 +6,11 @@
   &__image {
     flex-basis: 50%;
     height: 520px;
-    background-position: center;
+    max-width: 870px;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+
   }
   &__text {
     display: flex;
@@ -21,6 +23,13 @@
     font-family: "IBM Plex Sans", sans-serif;
     color: #687480;
     font-weight: 500;
+    &-event {
+      display: flex;
+      justify-content: space-between;
+      padding: 0;
+      padding-bottom: 16px;
+      margin: 0;
+    }
   }
   &__date {
     color: #1a5a4c;
