--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,8 @@
 @import "card";
 @import "image";
 @import "title";
-@import "cover";
+@import "event";
+@import "modificators";
 
 html {
   font-family: Montserrat, sans-serif;
