--- a/src/styles/_event.scss
+++ b/src/styles/_event.scss
@@ -27,7 +27,7 @@
   }
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: $notebook-bp ) {
   .events {
     padding: 0 33px;
 
@@ -46,7 +46,7 @@
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: $phone-bp) {
   .events {
     padding: 0 20px;
     
