--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -44,7 +44,7 @@
   }
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: $notebook-bp ) {
   .gallery {
     &__img:nth-child(3),
     &__img:nth-child(6) {
@@ -53,7 +53,7 @@
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: $tablet-bp) {
   .gallery {
     &__photo {
       display: flex;
@@ -73,7 +73,7 @@
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: $phone-bp) {
   .gallery {
 
     &__photo {
