--- a/src/styles/_lecture.scss
+++ b/src/styles/_lecture.scss
@@ -30,7 +30,7 @@
   }
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: $notebook-bp ) {
   .lecture {
     &__img {
       height: 550px;
@@ -38,7 +38,7 @@
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: $tablet-bp) {
   .lecture {
     &__photo {
       margin: 0 34px;
@@ -52,7 +52,7 @@
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: $phone-bp) {
   .lecture {
     &__photo {
       margin: 0;
