--- a/src/styles/_section.scss
+++ b/src/styles/_section.scss
@@ -9,7 +9,7 @@
   }
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: $notebook-bp ) {
   .section {
     
     &__heading {
@@ -18,7 +18,7 @@
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: $phone-bp) {
   .section {
     
     &__heading {
