--- a/src/styles/_subscriptiop.scss
+++ b/src/styles/_subscriptiop.scss
@@ -59,7 +59,7 @@
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: $tablet-bp) {
   .subscription {
     &__input {
       margin-right: 10px;
