--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -90,7 +90,7 @@
   }
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: $notebook-bp ) {
   .footer {
   
     &__section {
@@ -104,7 +104,7 @@
   }
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: $notebook-bp ) {
   .footer {
 
     &__section {
