--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -104,7 +104,7 @@
   }
 }
 
-@media screen and (max-width:1280px) {
+@media screen and (max-width:$notebook-bp ) {
   .header {
     &__elem {
       left: 2%;
@@ -112,7 +112,7 @@
   }
 }
 
-@media screen and (max-width:1024px) {
+@media screen and (max-width:$tablet-bp) {
   .header {
 
     &__elem {
