header and footer fixed

--- a/src/styles/_links.scss
+++ b/src/styles/_links.scss
@@ -8,21 +8,22 @@
     flex-direction: column;
     gap: 20px;
 
-    white-space: nowrap;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 14px;
 
-    &:last-child {
-      @media screen and (max-width: 320px) {
-        padding-left: 60px;
+    &:first-child {
+      @media screen and (max-width: 1200px) {
+        margin-right: 40px;
       }
 
       @media screen and (min-width: 1920px) {
-        padding-left: #{$grid-gap + $grid-column};
+        margin-right: #{$grid-gap + $grid-column};
+      }
+
+      @media screen and (max-width: 613px) {
+        margin-right: 50px;
       }
     }
-
-    @media screen and (max-width: 320px) {
-      width: 130px;
-    }
   }
-
 }
