--- a/src/styles/_logo.scss
+++ b/src/styles/_logo.scss
@@ -3,20 +3,25 @@
   display: flex;
   justify-content: space-between;
 
-  @media screen and (max-width: 768px) {
-    width: 100px;
-    padding-right: 35px;
-  }
-
   @media screen and (max-width: 320px) {
     gap: 30px;
   }
 
   &__facebook {
     height: 24px;
+    transition: transform $hover-duration;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__insta {
     height: 24px;
+    transition: transform $hover-duration;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
