--- a/src/styles/_schedule.scss
+++ b/src/styles/_schedule.scss
@@ -1,4 +1,6 @@
 .schedule {
+  width: #{$grid-gap + 2 * $grid-column};
+
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -7,13 +9,15 @@
   font-weight: 400;
   line-height: 21px;
 
-  @media screen and (max-width: 320px) {
-    width: calc(100vw - 100px);
+  @media screen and (max-width: 613px) {
+    width: 130px;
   }
 
-  @media screen and (min-width: 768px) {
-    &__week {
-      white-space: nowrap;
+  &__week {
+    white-space: nowrap;
+
+    @media screen and (max-width: 613px) {
+      white-space: normal;
     }
   }
 }
