--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -1,14 +1,15 @@
 .button {
   width: 70px;
   height: 70px;
-  transition: transform $hover-duration;
+  transition: transform $hover-duration, color $hover-duration;
 
   &:hover {
     transform: scale(1.1);
     cursor: pointer;
+    color: #fff;
   }
 
-  @media screen and (max-width: 320px) {
+  @media screen and (max-width: 613px) {
     width: 50px;
     height: 50px;
   }
