--- a/src/styles/_title.scss
+++ b/src/styles/_title.scss
@@ -16,13 +16,13 @@
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
 
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: 613px) {
       color: black;
       -webkit-text-stroke-width: 0;
     }
   }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1200px) {
     grid-column-start: 1;
 
     top: 163px;
@@ -31,15 +31,19 @@
     line-height: 55px;
   }
 
-  @media screen and (max-width: 320px) {
-    width: 280px;
+  @media screen and (max-width: 613px) {
+    width: 100vw;
 
     position: relative;
     top: 0;
-    grid-area: title;
-    
+
     font-size: 45px;
     line-height: 45px;
     text-align: center;
   }
+
+  @media screen and (max-width: 320px) {
+    width: 280px;
+  }
+
 }
