--- a/src/styles/galery/galeryBottom.scss
+++ b/src/styles/galery/galeryBottom.scss
@@ -234,6 +234,15 @@
 
 }
 
+.image-cell {
+  transition: box-shadow 0.4s;
+  cursor: pointer;
+
+  &:hover {
+    box-shadow: 5px 5px 3px;
+  }
+}
+
 .cell-fit--size {
   width: 100%;
 }
