--- a/src/styles/mainContent/events.scss
+++ b/src/styles/mainContent/events.scss
@@ -126,10 +126,17 @@
 
   .cell-fit {
     object-fit: cover;
+    transition: box-shadow 0.4s;
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: 3px 3px 3px black;
+    }
 
     @media (max-width:1799px) {
       height: 100%;
       width: 100%;
+      
     }
 
     @media (min-width:320px) {
