--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
+@import "../../node_modules/reset-css/sass/reset";
+@import "./normolize.scss";
 @import "utils";
 @import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/header";
+@import "./blocks/current-events";
+@import "./blocks/romantism";
+@import "./blocks/gallery";
+@import "./blocks/subscribe";
+@import "./blocks/footer";
