--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
-$c-gray: #eee;
+$c-white: #fff;
+$c-green: #1a5a4c;
+$c-gray: #4e4e4e;
+$c-dark-gray: #0f0e08;
+$c-red: #f14a27;
+$logo-width: 68px;
+$medium-screen-breakpoint: 1100px;
+$small-screen-breakpoint: 660px;
+$mobile-screen-breakpoint: 450px;
