exhibition, gallery, subscription and lecture fixed

--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -1,8 +1,11 @@
 .gallery {
   width: 100%;
-  padding-top: 300px;
   padding-left: 136px;
   padding-right: 136px;
+
+  display: flex;
+  flex-direction: column;
+  gap: $grid-gap;
 
   @media screen and (max-width: 1280px) {
     padding-left: 55px;
@@ -14,22 +17,13 @@
     padding-right: 175px;
   }
 
-  @media screen and (max-width: 768px) {
-    padding-top: 200px;
+  @media screen and (max-width: 1200px) {
     padding-left: 34px;
   }
 
-  @media screen and (max-width: 320px) {
-    padding-top: 80px;
+  @media screen and (max-width: 613px) {
     padding-left: 20px;
 
     display: grid;
-  }
-
-  &__heading {
-    @media screen and (max-width: 320px) {
-      text-align: start;
-      padding-left: 50px;
-    }
   }
 }
