--- a/src/styles/_lecture.scss
+++ b/src/styles/_lecture.scss
@@ -1,6 +1,7 @@
 .lecture {
   height: 619px;
   width: 100vw;
+
   position: relative;
 
   background-image: url("../images/lec1.png");
@@ -16,11 +17,11 @@
     height: 674px;
   }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1200px) {
     height: 390px;
   }
 
-  @media screen and (max-width: 320px) {
+  @media screen and (max-width: 613px) {
     height: 210px;
   }
 
@@ -46,11 +47,11 @@
       top: calc(674px - 204px / 2);
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1200px) {
       top: calc(390px - 204px / 2);
     }
 
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: 613px) {
       width: 278px;
       height: 154px;
       padding-top: 25px;
@@ -58,7 +59,7 @@
       padding-bottom: 34px;
 
       top: calc(210px - 204px / 2);
-      left: 25px;
+      left: calc(50% - 278px / 2);
     }
   }
 
@@ -68,7 +69,7 @@
 
     font-size: 14px;
 
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: 613px) {
       gap: 14px;
 
       font-size: 16px;
@@ -97,7 +98,7 @@
     line-height: 36px;
     color: #0f0e08;
 
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: 613px) {
       padding-top: 15px;
 
       font-size: 28px;
