--- a/src/styles/_section.scss
+++ b/src/styles/_section.scss
@@ -1,14 +1,25 @@
 .section {
-  width: 100%;
-  margin: 0 auto;
+  width: 100vw;
 
-  display: grid;
-  grid-template-columns: repeat(auto-fill, $grid-column);
-  gap: $grid-gap;
-  justify-content: start;
+  &__heading {
+    margin-top: 176px;
 
-  @media screen and (max-width: 320px) {
-    grid-template-columns: repeat(auto-fill, 140px);
-    gap: 20px;
+    @media screen and (max-width: 1200px) {
+      margin-top: 66px;
+    }
+
+    @media screen and (max-width: 613px) {
+      margin-top: 102px;
+    }
+
+    &--gallery {
+      @media screen and (max-width: 1200px) {
+        margin-top: 186px;
+      }
+
+      @media screen and (max-width: 613px) {
+        margin-top: 102px;
+      }
+    }
   }
 }
