--- a/src/styles/_events.scss
+++ b/src/styles/_events.scss
@@ -27,7 +27,7 @@
     background-color: #1a5a4c;
   }
 
-  @media screen and (max-width: 768px) {
-    visibility: hidden;
+  @media screen and (max-width: 1200px) {
+    display: none;
   }
 }
