--- a/src/styles/_exhibition.scss
+++ b/src/styles/_exhibition.scss
@@ -1,15 +1,21 @@
 .exhibition {
   width: 100%;
-  padding-left: 136px;
-  padding-right: 136px;
-  padding-top: 176px;
+  padding: 0 136px 100px;
 
-  display: grid;
-  justify-content: start;
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
 
   @media screen and (max-width: 1280px) {
     padding-left: 55px;
     padding-right: 55px;
+  }
+
+  @media screen and (max-width: 1200px) {
+    padding-left: 34px;
+    padding-right: 34px;
+
+    gap: 50px;
   }
 
   @media screen and (min-width: 1920px) {
@@ -17,226 +23,110 @@
     padding-right: 175px;
   }
 
-  @media screen and (max-width: 768px) {
-    padding-top: 66px;
-    padding-left: 34px;
-    padding-right: 34px;
-  }
+  @media screen and (max-width: 613px) {
+    padding: 0 20px 60px;
 
-  @media screen and (max-width: 320px) {
-    padding-left: 20px;
-    padding-right: 20px;
+    gap: 60px;
   }
 
   &__block {
-    display: grid;
-    gap: calc(#{$grid-gap * 2 + $grid-column});
+    width: 100%;
+    display: flex;
+    gap: #{2 * $grid-gap + 1 * $grid-column};
 
-    @media screen and (max-width: 768px) {
-      display: flex;
+    @media screen and (max-width: 1200px) {
       flex-direction: column;
-      gap: 30px;
-    }
-  }
-
-  &__block--left {
-    grid-template-columns: 670px 370px;
-    padding-bottom: 100px;
-
-    @media screen and (min-width: 1920px) {
-      grid-template-columns: 870px 370px;
-    }
-
-    @media screen and (max-width: 768px) {
-      padding-bottom: 50px;
+      gap: $grid-gap;
     }
   }
 
   &__block--right {
-    grid-template-columns: 370px 670px;
-    margin-bottom: 100px;
-
-    @media screen and (min-width: 1920px) {
-      grid-template-columns: 370px 870px;
-      padding-left: 200px;
-    }
-
-    @media screen and (max-width: 768px) {
-      grid-template-columns: minmax(360px);
-      margin-bottom: 90px;
-    }
-
-    @media screen and (max-width: 320px) {
-      margin-bottom: 40px;
-    }
-  }
-
-  &__img {
-    height: 520px;
-  }
-
-  &__img--left {
-    background-image: url("../images/ex1.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-
-    @media screen and (min-width: 1920px) {
-      background-image: url("../images/ex1.png");
-    }
-
-    @media screen and (max-width: 768px) {
-      width: 700px;
-    }
-
-    @media screen and (max-width: 320px) {
-      width: 280px;
-      height: 210px;
+    @media screen and (min-width: 1700px) {
+      padding-left: #{2 * $grid-gap + 2 * $grid-column};
     }
   }
 
   &__img--right {
-    background-image: url("../images/ex2.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    order: 2;
 
-    @media screen and (min-width: 1920px) {
-      background-image: url("../images/ex2.png");
-    }
-
-    @media screen and (max-width: 768px) {
-      position: relative;
-      bottom: 260px;
-    }
-
-    @media screen and (max-width: 768px) {
-      width: 700px;
-    }
-
-    @media screen and (max-width: 320px) {
-      width: 280px;
-      height: 210px;
-      bottom: 270px;
+    @media screen and (max-width: 1200px) {
+      order: 0;
     }
   }
 
-  &__main--left {
-    @media screen and (max-width: 768px) {
-      width: 360px;
-    }
+  &__main {
+    max-width: #{3 * $grid-gap + 4 * $grid-column};
 
-    @media screen and (max-width: 320px) {
-      width: 280px;
-    }
-  }
-
-  &__main--right {
-    @media screen and (max-width: 768px) {
-      width: 360px;
-      position: relative;
-      top: 520px;
-    }
-
-    @media screen and (max-width: 320px) {
-      width: 280px;
-      position: relative;
-      top: 215px;
-    }
+    display: flex;
+    flex-direction: column;
   }
 
   &__top {
-    padding-top: 20px;
+    padding-bottom: 30px;
 
-    display: grid;
-    grid-template-columns: repeat(2, $grid-column);
-    gap: $grid-gap;
+    display: flex;
+    gap: 26px;
 
     font-size: 14px;
+    line-height: 14px;
 
-    @media screen and (max-width: 768px) {
-      padding-top: 0;
-      padding-bottom: 15px;
-    }
+    @media screen and (max-width: 613px) {
+      padding-bottom: 10px;
 
-    @media screen and (max-width: 320px) {
-      padding-bottom: 15px;
+      font-size: 16px;
+      line-height: 16px;
     }
   }
 
   &__label {
-    font-weight: 500;
-    line-height: 21px;
     color: #687480;
     text-transform: uppercase;
-
-    @media screen and (max-width: 768px) {
-      line-height: 0;
-    }
-
-    @media screen and (max-width: 320px) {
-      font-size: 16px;
-    }
+    font-weight: 500;
   }
 
   &__dates {
-    font-weight: 700;
-    line-height: 21px;
     color: #1a5a4c;
-    white-space: nowrap;
-
-    @media screen and (max-width: 768px) {
-      line-height: 0;
-    }
-
-    @media screen and (max-width: 320px) {
-      font-size: 16px;
-    }
+    font-weight: 700;
   }
 
   &__title {
-    display: inline-block;
-    padding-top: 10px;
+    padding-bottom: 15px;
 
-    font-family: $secondary-font;
-    font-weight: 400;
-    font-size: 36px;
-    line-height: 36px;
+    display: inline-block;
+
     position: relative;
 
-    @media screen and (max-width: 320px) {
+    font-family: $secondary-font;
+    color: #0f0e08;
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 36px;
+
+    @media screen and (max-width: 613px) {
+      padding-bottom: 10px;
+
       font-size: 28px;
       line-height: 28px;
     }
 
     &::after {
       content: "";
-      display: block;
-      position: absolute;
-      top: 24px;
-      left: calc(100% + 20px);
-      background-color: #f14a27;
+
       width: 15px;
       height: 15px;
 
-      @media screen and (max-width: 320px) {
-        top: 19px;
-        left: calc(100% + 12px);
-      }
+      position: absolute;
+      top: 15px;
+      left: calc(100% + 20px);
+
+      background-color: #f14a27;
     }
   }
 
   &__text {
-    padding-top: 15px;
-
     font-weight: 300;
     font-size: 16px;
     line-height: 24px;
     color: #4e4e4e;
-
-    @media screen and (max-width: 320px) {
-      padding-top: 11px;
-    }
   }
-
 }
