--- a/src/styles/_heading.scss
+++ b/src/styles/_heading.scss
@@ -1,5 +1,5 @@
 .heading {
-  padding-bottom: 60px;
+  padding: 0 136px 60px;
 
   font-family: $secondary-font;
   font-weight: 700;
@@ -8,14 +8,22 @@
   color: #0f0e08;
   white-space: nowrap;
 
-  @media screen and (max-width: 768px) {
-    padding-bottom: 50px;
+  @media screen and (max-width: 1280px) {
+    padding-left: 55px;
+    padding-right: 55px;
   }
 
-  @media screen and (max-width: 320px) {
-    padding-top: 50px;
-    padding-bottom: 40px;
-    width: 100%;
+  @media screen and (max-width: 1200px) {
+    padding: 0 34px 50px;
+  }
+
+  @media screen and (min-width: 1920px) {
+    padding-left: 175px;
+    padding-right: 175px;
+  }
+
+  @media screen and (max-width: 613px) {
+    padding: 0 20px 40px;
 
     font-size: 36px;
     font-weight: 700;
