--- a/src/styles/_photos.scss
+++ b/src/styles/_photos.scss
@@ -5,22 +5,23 @@
   justify-content: space-between;
   gap: $grid-gap;
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1200px) {
     gap: $grid-gap / 2;
   }
 
   &__first {
     height: 600px;
-    margin-bottom: $grid-gap;
 
-    @media screen and (max-width: 768px) {
+    display: flex;
+
+    @media screen and (max-width: 1200px) {
       height: 543px;
       margin-bottom: 30px;
 
       overflow: auto;
     }
 
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: 613px) {
       height: 410px;
       margin-bottom: 30px;
 
@@ -31,7 +32,7 @@
   &__second {
     height: 360px;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1200px) {
       display: none;
     }
   }
@@ -49,41 +50,40 @@
     &--3,
     &--5,
     &--6 {
-      width: 370px;
+      min-width: 370px;
+      flex-grow: 1;
+      object-position: top;
 
-      @media screen and (max-width: 768px) {
-        width: 340px;
+      @media screen and (max-width: 1200px) {
+        min-width: 340px;
       }
     }
 
     &--2,
     &--4 {
-      width: 770px;
+      min-width: 770px;
+      flex-grow: 2;
 
-      @media screen and (max-width: 768px) {
-        width: 700px;
+      @media screen and (max-width: 1200px) {
+        min-width: 700px;
       }
     }
 
     &--3,
     &--6 {
-      @media screen and (min-width: 769px) and (max-width: 1440px) {
+      @media screen and (min-width: 1201px) and (max-width: 1919px) {
         display: none;
       }
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1200px) {
       height: 543px;
       object-fit: contain;
     }
 
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: 613px) {
       height: 410px;
       object-fit: cover;
     }
-  }
-
-  @media screen and (max-width: 768px) {
-    width: 100vw;
   }
 }
