after-element in exhibition and header spaces for mobile fixed

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -84,13 +84,14 @@
 
     @media screen and (max-width: 613px) {
       width: 100vw;
+
       justify-content: center;
       grid-area: tickets;
       top: 0;
     }
 
     @media screen and (max-width: 320px) {
-      width: 280px;
+      width: 300px;
     }
   }
 
@@ -110,7 +111,7 @@
   }
 
   @media screen and (max-width: 613px) {
-    padding-left: 20px;
+    padding-left: 0;
 
     grid-template-columns: repeat(auto-fill, 1px);
     gap: 20px;
