--- a/src/styles/_tickets.scss
+++ b/src/styles/_tickets.scss
@@ -1,5 +1,9 @@
 .tickets {
 
+  @media screen and (max-width: 613px) {
+    padding-left: 20px;
+  }
+
   &__text {
     width: 150px;
     padding: 26px 43px;
