--- a/src/styles/_exhibition.scss
+++ b/src/styles/_exhibition.scss
@@ -93,6 +93,7 @@
     padding-bottom: 15px;
 
     display: inline-block;
+    width: max-content;
 
     position: relative;
 
@@ -116,10 +117,15 @@
       height: 15px;
 
       position: absolute;
-      top: 15px;
+      top: 13px;
       left: calc(100% + 20px);
 
       background-color: #f14a27;
+
+      @media screen and (max-width: 613px) {
+        top: 9px;
+        left: calc(100% + 15px);
+      }
     }
   }
 
