added favicon and title

--- a/src/styles/_burger.scss
+++ b/src/styles/_burger.scss
@@ -4,10 +4,7 @@
   width: 30px;
   height: 20px;
 
-  top: 5%;
-  left: 10%;
-
-  & span {
+  &__line {
     position: absolute;
     background-color: #000;
     left: -10px;
@@ -35,23 +32,17 @@
     bottom: 0;
   }
 
-  &.active span {
+  &_active &__line {
     transform: scale(0);
   }
 
-  &.active::before {
+  &_active::before {
     transform: rotate(45deg);
     top: 9px;
   }
 
-  &.active::after {
+  &_active::after {
     transform: rotate(-45deg);
     bottom: 9px;
-  }
-}
-
-@media screen and (max-width:$notebook-bp ) {
-  .burger {
-    left: 5%;
   }
 }
