--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -4,6 +4,11 @@
   grid-template-columns: 35% auto;
   justify-items: end;
 
+  &__burger {
+    top: 5%;
+    left: 10%;
+  }
+
   &__elem {
     position: absolute;
     left: 9%;
@@ -108,6 +113,10 @@
   .header {
     &__elem {
       left: 2%;
+    }
+    
+    &__burger {
+      left: 5%;
     }
   }
 }
