spaces for small mobile edited

--- a/src/styles/_photos.scss
+++ b/src/styles/_photos.scss
@@ -22,7 +22,7 @@
     }
 
     @media screen and (max-width: 613px) {
-      height: 410px;
+      height: 440px;
       margin-bottom: 30px;
 
       overflow: auto;
@@ -56,6 +56,10 @@
 
       @media screen and (max-width: 1200px) {
         min-width: 340px;
+      }
+
+      @media screen and (max-width: 613px) { /*new 3 lines*/
+        height: 410px;
       }
     }
 
