small bugs fixed

--- a/src/styles/_copyrights.scss
+++ b/src/styles/_copyrights.scss
@@ -1,5 +1,5 @@
 .copyrights {
-  width: 100vw;
+  width: 100%;
   padding: 0 136px 35px;
 
   display: flex;
@@ -17,20 +17,20 @@
     padding: 0 176px 35px;
   }
 
-  @media screen and (max-width: 320px) {
+  @media screen and (max-width: 613px) {
     flex-direction: column;
     gap: 15px;
   }
 
   &__date {
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: 613px) {
       order: 2;
       text-align: center;
     }
   }
 
   &__name {
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: 613px) {
       text-align: center;
     }
   }
