--- a/src/styles/_dots.scss
+++ b/src/styles/_dots.scss
@@ -1,7 +1,7 @@
 .dots {
   display: flex;
   gap: 22px;
-  width: calc(100vw - 34px - 42px);
+  width: calc(100% - 34px - 42px);
   justify-content: center;
 
   &__item {
@@ -16,7 +16,8 @@
   }
 
   @media screen and (max-width: 613px) {
-    width: calc(100vw - 20px - 42px);
+    width: calc(100% - 20px - 42px);
+    margin: 0 auto;
   }
 
   @media screen and (min-width: 1200px) {
