--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  width: 100vw;
+  width: 100%;
   padding-left: 136px;
 
   display: grid;
@@ -83,14 +83,14 @@
     }
 
     @media screen and (max-width: 613px) {
-      width: 100vw;
+      width: 100%;
 
       justify-content: center;
       grid-area: tickets;
       top: 0;
     }
 
-    @media screen and (max-width: 320px) {
+    @media screen and (max-width: 613px) { /*edited from 320px*/
       width: 300px;
     }
   }
