--- a/src/styles/_photos.scss
+++ b/src/styles/_photos.scss
@@ -58,7 +58,7 @@
         min-width: 340px;
       }
 
-      @media screen and (max-width: 613px) { /*new 3 lines*/
+      @media screen and (max-width: 613px) {
         height: 410px;
       }
     }
