--- a/src/styles/_title.scss
+++ b/src/styles/_title.scss
@@ -32,7 +32,7 @@
   }
 
   @media screen and (max-width: 613px) {
-    width: 100vw;
+    width: 100%;
     padding-left: 20px;
 
     position: relative;
@@ -44,7 +44,7 @@
   }
 
   @media screen and (max-width: 320px) {
-    width: 280px;
+    width: max-content;
   }
 
 }
