copyright for small mobile fixed

--- a/src/styles/_copyrights.scss
+++ b/src/styles/_copyrights.scss
@@ -20,18 +20,14 @@
   @media screen and (max-width: 613px) {
     flex-direction: column;
     gap: 15px;
+    align-items: center;
+
+    white-space: nowrap;
   }
 
   &__date {
     @media screen and (max-width: 613px) {
       order: 2;
-      text-align: center;
-    }
-  }
-
-  &__name {
-    @media screen and (max-width: 613px) {
-      text-align: center;
     }
   }
 
