--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -61,7 +61,7 @@
     }
 
     @media screen and (max-width: 613px) {
-      width: 280px;
+      width: 260px;
 
       flex-direction: row;
       justify-content: space-between;
@@ -78,6 +78,7 @@
     @media screen and (min-width: 1920px) {
       margin-right: #{2 * $grid-gap + $grid-column};
     }
+
   }
 
   &__contacts {
@@ -116,6 +117,8 @@
     @media screen and (max-width: 613px) {
       margin-top: -50px;
       margin-left: 0;
+
+      white-space: nowrap;
     }
   }
 
