--- a/src/styles/blocks/romantism.scss
+++ b/src/styles/blocks/romantism.scss
@@ -19,7 +19,8 @@
     right: 50%;
 
     padding: 45px 100px 50px;
-    width: max-content;
+    width: 570px;
+    height: 204px;
 
     background-color: #fff;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
@@ -56,6 +57,8 @@
 
     &__wrap {
       padding: 25px 20px 34px;
+      width: 278px;
+      height: 154px;
     }
 
     &__title {
