changed some issues

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,9 +17,8 @@
     display: grid;
     justify-items: center;
 
-    margin: 0 auto;
+    margin: 0 auto 100px;
     max-width: 1920px;
-    margin-bottom: 100px;
 
     &--top {
       grid-template-columns: 2fr 1fr;
