--- a/src/styles/_burger.scss
+++ b/src/styles/_burger.scss
@@ -1,6 +1,4 @@
 .burger {
-  display: block;
-  position: absolute;
   width: 30px;
   height: 20px;
 
@@ -11,7 +9,7 @@
     width: 100%;
     height: 2px;
     top: 9px;
-    transition: all 0.2s linear;
+    transition: transform 0.2s linear;
   }
   &::before,
   &::after {
@@ -21,7 +19,7 @@
     width: 100%;
     height: 2px;
     left: -10px;
-    transition: all 0.2s linear;
+    transition: transform 0.2s linear;
   }
 
   &::before {
@@ -36,13 +34,16 @@
     transform: scale(0);
   }
 
-  &_active::before {
-    transform: rotate(45deg);
-    top: 9px;
-  }
+  &_active {
+    
+    &::before {
+      transform: rotate(45deg);
+      top: 9px;
+    }
 
-  &_active::after {
-    transform: rotate(-45deg);
-    bottom: 9px;
+    &::after {
+      transform: rotate(-45deg);
+      bottom: 9px;
+    }
   }
 }
