--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -7,7 +7,8 @@
     gap: 30px;
     justify-content: start;
     margin: 0 30px 200px;
-    grid-template-areas: "a b b c" "d d e f";
+    grid-template-areas: "left-top miidle-top miidle-top right-top"
+      "left-bottom left-bottom middle-bottom rigth-bottom";
   }
 
   &__img {
@@ -22,24 +23,24 @@
   }
 
   &__img:nth-child(1) {
-    grid-area: a;
+    grid-area: left-top;
   }
   &__img:nth-child(2) {
-    grid-area: b;
+    grid-area: miidle-top;
   }
   &__img:nth-child(3) {
-    grid-area: c;
+    grid-area: right-top;
   }
   &__img:nth-child(4) {
-    grid-area: d;
+    grid-area: left-bottom;
     height: 300px;
   }
   &__img:nth-child(5) {
-    grid-area: e;
+    grid-area: middle-bottom;
     height: 300px;
   }
   &__img:nth-child(6) {
-    grid-area: f;
+    grid-area: rigth-bottom;
     height: 300px;
   }
 }
