--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -17,19 +17,19 @@
     font-weight: $fw-bold;
 
     border: none;
-    background-color: #f14a27;
+    background-color: $hover-links-color;
     
-    transition: color 1s , background-color 1s, transform 500ms;
+    transition: color 1s , background-color 1s, transform $transition-time;
 
     &:hover {
       background-color: rgb(24, 9, 9);
-      color: #dad3d3;
+      color: $form-button-hover-color;
       transform: scale(1.2);
     }
   }
 }
 
-@media (max-width: calc(#{$tablet-width} - 100px)) {
+@media (max-width: $tablet-width - 100px) {
   .form {
     justify-content: center;
 
