--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,8 +1,11 @@
 .gallery {
-  margin: 0 auto;
-  max-width: 1200px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 
   &__title {
+    align-self: flex-start;
     @extend %title;
     margin-bottom: 60px;
   }
@@ -16,7 +19,7 @@
   }
 
   &__img {
-    transition: transform 400ms ease-in-out;
+    transition: transform $transition-time ease-in-out;
 
     &:hover {
       transform: translate(-10px, 20px);
@@ -49,14 +52,14 @@
   }
 }
 
-@media (min-width: calc(#{$desktop-width} + 500px)) {
+@media (min-width: $desktop-width + 500px) {
   .gallery {
     padding-top: 200px;
     max-width: 1900px;
   }
 }
 
-@media (max-width: calc(#{$desktop-width} + 500px)) {
+@media (max-width: $desktop-width + 500px) {
   .gallery {
     padding: 200px 10px 0;
     
@@ -75,7 +78,7 @@
   }
 }
 
-@media (max-width: calc(#{$notebook-width} + 100px)) {
+@media (max-width: $notebook-width + 100px) {
   .gallery {
     padding: 0 0 0 10px;
 
@@ -113,7 +116,7 @@
   }
 }
 
-@media (max-width: calc(#{$tablet-width} - 80px)) {
+@media (max-width: $tablet-width - 80px) {
   .gallery {
 
     &__title {
