--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -61,7 +61,7 @@
     font-weight: $fw-bold;
     color: transparent;
     -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #0f0e08;
+    -webkit-text-stroke-color: $links-color;
   }
 
   &__link {
@@ -72,9 +72,9 @@
     font-family: $ff-ibm;
     font-weight: 500;
     font-size: 16px;
-    color: #0f0e08;
+    color: $links-color;
     
-    transition: transform 500ms ease-in-out;
+    transition: transform $transition-time ease-in-out;
 
     &:hover {
       transform: scale(1.1);
@@ -90,7 +90,7 @@
   &__link-arrow {
     padding: 27px 31px;
 
-    color: #d7dde3;
+    color: $form-button-hover-color;
 
     background-color: $text-color;
     border: 1px solid $text-color;
@@ -162,7 +162,7 @@
     }
 
     &__title-transparent {
-      color: #0f0e08;
+      color: $links-color;
     }
 
     &__link {
