--- a/src/styles/links.scss
+++ b/src/styles/links.scss
@@ -11,7 +11,7 @@
   }
 }
 
-@media (max-width: calc(#{$tablet-width} - 100px)) {
+@media (max-width: $tablet-width - 100px) {
   .links {
     display: flex;
     flex-direction: row;
