--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -7,16 +7,16 @@
   }
 
   &__link {
-    color: #0f0e08;
+    color: $links-color;
 
-    transition: color 400ms;
+    transition: color $transition-time;
     &:hover {
-      color: #f14a27;
+      color: $hover-links-color;
     }
   }
 }
 
-@media (max-width: calc(#{$tablet-width} - 100px)) {
+@media (max-width: $tablet-width - 100px) {
   .nav__list {
     grid-gap: 20px 60px;
   }
