--- a/src/styles/shedule.scss
+++ b/src/styles/shedule.scss
@@ -23,13 +23,13 @@
   }
 }
 
-@media (max-width: calc(#{$tablet-width} - 100px)) {
+@media (max-width: $tablet-width - 100px) {
   .shedule {
     width: 130px;
   }
 }
 
-@media (max-width: calc(#{$phone-width} - 50px)) {
+@media (max-width: $phone-width - 50px) {
   .schedule {
     width: 100px;
   }
