--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -15,7 +15,7 @@
     
     @extend %title;
 
-    color: #fff;
+    color: $primary-background-color;
   }
 
   &__text {
@@ -24,7 +24,7 @@
 
     font-size: 18px;
     font-family: $ff-ibm;
-    color: #fff;
+    color: $primary-background-color;
     line-height: 28px;
   }
 }
@@ -35,7 +35,7 @@
   }
 }
 
-@media (max-width: calc(#{$tablet-width} - 100px)) {
+@media (max-width: $tablet-width - 100px) {
   .subscription__title {
     font-size: 36px;
   }
