--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -7,22 +7,22 @@
   }
 
   &__links {
-    color: #0f0e08;
+    color: $links-color;
 
-    transition: color 400ms;
+    transition: color $transition-time;
     &:hover {
-      color: #f14a27;
+      color: $hover-links-color;
     }
   }
 }
 
-@media (max-width: calc(#{$tablet-width} - 100px)) {
+@media (max-width: $tablet-width - 100px) {
   .contacts {
     width: 130px;
   }
 }
 
-@media (max-width: calc(#{$phone-width} - 50px)) {
+@media (max-width: $phone-width - 50px) {
   .contacts {
     width: 128px;
   }
