--- a/src/styles/description.scss
+++ b/src/styles/description.scss
@@ -1,4 +1,6 @@
 .description {
+  position: relative;
+
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -11,16 +13,18 @@
   background-size: cover;
   
   &__info {
+    position: absolute;
+    bottom: -16%;
+
     display: grid;
     grid-template-areas: "type time"
       "title title";
     padding: 45px 100px;
-    margin-bottom: -120px;
 
     width: 570px;
     height: 204px;
 
-    background-color: #fff;
+    background-color: $primary-background-color;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
   }
 
@@ -44,49 +48,25 @@
   }
 }
 
-@media (min-width: calc(#{$desktop-width} + 500px)) {
-  .description__info {
-    margin-bottom: -100px;
-  }
-}
-
-@media (min-width: calc(#{$desktop-width} + 300px)) {
-  .description__info {
-    margin-bottom: -80px;
-  }
-}
-
-@media (min-width: calc(#{$desktop-width} + 100px)) {
-  .description__info {
-    margin-bottom: -60px;
-  }
-}
-
-@media (min-width: calc(#{$desktop-width} - 50px)) {
-  .description__info {
-    margin-bottom: -140px;
-  }
-}
-
 @media (max-width: $notebook-width) {
   .description {
     background-size: 90% 50%;
     background-position: center center;
     
     &__info {
-      margin-bottom: 40px;
+      margin-bottom: 160px;
     }
   }
 }
 
-@media (max-width: calc(#{$tablet-width} - 50px)) {
+@media (max-width: $tablet-width - 50px) {
   .description {
     background-size: contain;
     
     &__info {
       width: 300px;
       height: 154px;
-      margin-bottom: 120px;
+      margin-bottom: 240px;
       padding: 20px 25px;
     }
 
@@ -111,8 +91,9 @@
 
     background-size: 100% 50%;
     background-position: top;
-  }
-  .description__info {
-    margin-bottom: -20px;
+  
+    &__info {
+      margin-bottom: 350px;
+    }
   }
 }
