--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -3,7 +3,7 @@
 
   font-family: $ff-ibm;
   font-size: 14px;
-  color: #0f0e08;
+  color: $links-color;
 
   &::after {
     position: absolute;
@@ -54,13 +54,13 @@
   }
 }
 
-@media (min-width: calc(#{$desktop-width} + 100px)) {
+@media (min-width: $desktop-width + 100px) {
   .footer__menu {
     margin-right: 150px;
   }
 }
 
-@media (max-width: calc(#{$desktop-width} + 100px)) {
+@media (max-width: $desktop-width + 100px) {
   .footer {
     &::after {
       left: 58%;
@@ -68,7 +68,7 @@
   }
 }
 
-@media (max-width: calc(#{$desktop-width} - 100px)) {
+@media (max-width: $desktop-width - 100px) {
   .footer {
     &::after {
       left: 58%;
@@ -76,7 +76,7 @@
   }
 }
 
-@media (max-width: calc(#{$notebook-width} + 100px)) {
+@media (max-width: $notebook-width + 100px) {
   .footer {
     &::after {
       left: 58%;
@@ -116,7 +116,7 @@
   }
 }
 
-@media (max-width: calc(#{$notebook-width} - 100px)) {
+@media (max-width: $notebook-width - 100px) {
   .footer {
 
     &::after {
@@ -125,7 +125,7 @@
   }
 }
 
-@media (max-width: calc(#{$tablet-width} + 100px)) {
+@media (max-width: $tablet-width + 100px) {
   .footer {
 
     &::after {
@@ -143,7 +143,7 @@
   }
 }
 
-@media (max-width: calc(#{$tablet-width} - 100px)) {
+@media (max-width: $tablet-width - 100px) {
   .footer {
     padding: 50px 20px;
 
@@ -199,7 +199,7 @@
   }
 }
 
-@media (max-width: calc(#{$phone-width} - 50px)) {
+@media (max-width: $phone-width - 50px) {
   .footer {
     
     &::after {
@@ -215,7 +215,7 @@
   }
 }
 
-@media (max-width: calc(#{$phone-width} - 170px)) {
+@media (max-width: $phone-width - 170px) {
   .footer {
     &::after {
       top: 48%;
