--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,5 +1,10 @@
 $text-color: #1a5a4c;
 $subtitle-color: #687480;
+$links-color: #0f0e08;
+$hover-links-color: #f14a27;
+$primary-background-color: #fff;
+$secondary-text-color: #4e4e4e;
+$form-button-hover-color: #dad3d3;
 
 $fw-bold: 700;
 
@@ -10,3 +15,5 @@ $desktop-width: 1400px;
 $notebook-width: 1100px;
 $tablet-width: 800px;
 $phone-width: 500px;
+
+$transition-time: 500ms;
