--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -12,12 +12,45 @@
   }
 
   &__pictures {
-    margin-bottom: 30px;
+    margin-bottom: 70px;
+  }
+
+  &__dots {
+    display: none;
+    margin: 0 auto;
+    justify-content: space-between;
+    width: 102px;
+  }
+
+  &__dot {
+    width: 9px;
+    height: 9px;
+
+    border-radius: 50%;
+    background-color: $c-light-gray;
+
+    &--active {
+      background-color: $c-green;
+    }
   }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: $large-screem-breakpoint) {
   .gallery {
-    display: none;
+    padding-bottom: 110px;
+
+    &__dots {
+      display: flex;
+    }
+  }
+}
+
+@media screen and (max-width: $mobile-screen-breakpoint) {
+  .gallery {
+    text-align: center;
+
+    &__title {
+      font-size: 3rem;
+    }
   }
 }
