--- a/src/styles/blocks/pictures.scss
+++ b/src/styles/blocks/pictures.scss
@@ -41,3 +41,31 @@
     }
   }
 }
+
+@media screen and (max-width: $large-screem-breakpoint) {
+  .pictures {
+    grid-template-columns: repeat(3, 340px);
+    grid-template-rows: 543px;
+    gap: 20px;
+    justify-content: start;
+    overflow: auto;
+
+    &__img {
+      &--hide {
+        display: block;
+      }
+    }
+
+    &--second-line {
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: $small-screen-breakpoint) {
+  .pictures {
+    grid-template-columns: repeat(3, 280px);
+    grid-template-rows: 410px;
+    gap: 10px;
+  }
+}
