--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,6 +1,8 @@
 .gallery {
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
   padding: 0;
   &__grid {
     display: grid;
@@ -35,5 +37,8 @@
     grid-column: 4 / span 1;
     grid-row: 2 / span 1;
     background-image: url(\images\gallery6.jpg);
+  }
+  &__slider {
+    display: none;
   }
 }
