--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,14 +50,26 @@ body {
 @media screen and (max-width: 1200px) {
   .gallery {
     justify-content: center;
+    align-items: center;
     &__grid {
+      margin: 0 0 30px 34px;
+      display: flex;
       height: 600px;
-      width: auto;
+      width: calc(100% - 34px);
       overflow: hidden;
     }
     &__image {
       height: 600px;
-      width: 370px;
+      min-width: 370px;
+      &:nth-child(2) {
+        background-image: url(\images\gallery3.jpg);
+      }
+      &:nth-child(4) {
+        background-image: url(\images\gallery2.jpg);
+      }
+    }
+    &__slider {
+      display: block;
     }
   }
 }
