--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import "event";
 @import "modificators";
 @import "gallery";
+@import "footer";
 
 html {
   font-family: Montserrat, sans-serif;
@@ -69,7 +70,11 @@ body {
       }
     }
     &__slider {
-      display: block;
+      display: flex;
+      width: 15%;
+      margin-bottom: 90px;
+      justify-content: space-between;
+
     }
   }
 }
