--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -2,7 +2,8 @@
   display: flex;
 
   justify-content: center;
-  padding: 60px 0;
+  padding: 0 0 50px;
+
   &__image {
     flex-basis: 50%;
     height: 520px;
