--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,9 +1,11 @@
 .gallery {
+
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   padding: 0;
+
   &__grid {
     display: grid;
     grid-template-columns: repeat(4, 370px);
@@ -11,34 +13,51 @@
     grid-gap: 30px;
     margin-bottom: 200px;
   }
+
   &__image:first-child {
     grid-column: 1 / span 1;
     background-image: url(\images\gallery1.jpg);
   }
+
   &__image:nth-child(2) {
     grid-column: 2 / span 2;
     background-image: url(\images\gallery2.jpg);
   }
+
   &__image:nth-child(3) {
     grid-column: 4 / span 1;
     background-image: url(\images\gallery3.jpg);
   }
+
   &__image:nth-child(4) {
     grid-column: 1 / span 2;
     grid-row: 2 / span 1;
     background-image: url(\images\gallery4.jpg);
   }
+
   &__image:nth-child(5) {
     grid-column: 3 / span 1;
     grid-row: 2 / span 1;
     background-image: url(\images\gallery5.jpg);
   }
+
   &__image:nth-child(6) {
     grid-column: 4 / span 1;
     grid-row: 2 / span 1;
     background-image: url(\images\gallery6.jpg);
   }
+
   &__slider {
     display: none;
+  }
+
+  &__point {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: lightgrey;
+  }
+  .is-active {
+    background-color: rgb(119, 119, 119);
   }
 }
