--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -3,8 +3,7 @@
   padding-left: 136px;
 
   display: grid;
-  grid-template-columns: repeat(6, $grid-column) repeat(auto-fill, 1px);
-  gap: $grid-gap;
+  grid-template-columns: repeat(6, 100px) repeat(auto-fill, 2px);
   grid-template-areas: "space image";
 
   position: relative;
@@ -90,7 +89,7 @@
       top: 0;
     }
 
-    @media screen and (max-width: 613px) { /*edited from 320px*/
+    @media screen and (max-width: 613px) {
       width: 300px;
     }
   }
@@ -106,15 +105,13 @@
   @media screen and (max-width: 1200px) {
     padding-left: 34px;
 
-    grid-template-columns: repeat(3, 100px) repeat(auto-fill, 1px);
-    gap: 20px;
+    grid-template-columns: repeat(3, 120px) repeat(auto-fill, 2px);
   }
 
   @media screen and (max-width: 613px) {
     padding-left: 0;
 
-    grid-template-columns: repeat(auto-fill, 1px);
-    gap: 20px;
+    grid-template-columns: repeat(auto-fill, 2px);
 
     grid-template-areas: "image image"
       "title title"
