--- a/src/styles/_title.scss
+++ b/src/styles/_title.scss
@@ -33,6 +33,7 @@
 
   @media screen and (max-width: 613px) {
     width: 100%;
+    padding-top: 20px;
     padding-left: 20px;
 
     position: relative;
