Fixes after mentor review

--- a/src/styles/_contacts.scss
+++ b/src/styles/_contacts.scss
@@ -1,5 +1,5 @@
 .contacts {
-  width: #{$grid-gap + 2 * $grid-column};
+  width: $grid-gap + 2 * $grid-column;
 
   display: flex;
   flex-direction: column;
