--- a/src/styles/_dots.scss
+++ b/src/styles/_dots.scss
@@ -1,17 +1,17 @@
 .dots {
   display: flex;
   gap: 22px;
-  width: calc(100% - 34px - 42px);
+  width: calc(100% - 76px);
   justify-content: center;
 
   &__item {
-    background-color: #e0e0e0;
+    background-color: $color-for-dots;
     width: 9px;
     height: 9px;
     border-radius: 50%;
 
     &--active {
-      background-color: #1a5a4c;
+      background-color: $primary-color;
     }
   }
 
