--- a/src/styles/_exhibition.scss
+++ b/src/styles/_exhibition.scss
@@ -79,13 +79,13 @@
   }
 
   &__label {
-    color: #687480;
+    color: $color-for-additional-text;
     text-transform: uppercase;
     font-weight: 500;
   }
 
   &__dates {
-    color: #1a5a4c;
+    color: $primary-color;
     font-weight: 700;
   }
 
@@ -98,7 +98,7 @@
     position: relative;
 
     font-family: $secondary-font;
-    color: #0f0e08;
+    color: $color-for-additional-titles;
     font-size: 36px;
     font-weight: 400;
     line-height: 36px;
@@ -120,7 +120,7 @@
       top: 13px;
       left: calc(100% + 20px);
 
-      background-color: #f14a27;
+      background-color: $secondary-color;
 
       @media screen and (max-width: 613px) {
         top: 9px;
