--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -6,7 +6,7 @@
   grid-template-columns: repeat(auto-fill, $grid-column);
   gap: $grid-gap;
 
-  color: #0f0e08;
+  color: $color-for-additional-titles;
 
   @media screen and (max-width: 1280px) {
     padding: 50px 56px 100px;
