--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,3 +3,9 @@ $grid-gap: 30px;
 
 $secondary-font: "Montserrat", sans-serif;
 $hover-duration: 0.2s;
+
+$primary-color: #1a5a4c;
+$secondary-color: #f14a27;
+$color-for-dots: #e0e0e0;
+$color-for-additional-text: #687480;
+$color-for-additional-titles: #0f0e08;
