--- a/src/styles/_events.scss
+++ b/src/styles/_events.scss
@@ -1,16 +1,13 @@
 .events {
   display: block;
 
-  position: absolute;
-  top: 535px;
-  left: -16px;
   grid-column-start: 1;
 
   font-size: 14px;
   line-height: 14px;
   font-weight: 700;
 
-  color: #687480;
+  color: $color-for-additional-text;
   text-transform: uppercase;
 
   transform: rotate(270deg);
@@ -24,7 +21,7 @@
     right: 63px;
     width: 70px;
     height: 1px;
-    background-color: #1a5a4c;
+    background-color: $primary-color;
   }
 
   @media screen and (max-width: 1200px) {
