--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -22,6 +22,12 @@
 
     @media screen and (min-width: 1500px) {
       background-image: url("../images/muz1920.png");
+      background-position: left;
+      background-size: cover;
+    }
+
+    @media screen and (min-width: 2800px) {
+      width: calc(100vw - 33%);
     }
 
     @media screen and (max-width: 1280px) {
@@ -46,6 +52,11 @@
     }
   }
 
+  &__title {
+    position: absolute;
+    top: 271px;
+  }
+
   &__namu {
     padding-left: 52px;
 
@@ -66,6 +77,11 @@
 
       grid-column-start: 1;
     }
+  }
+
+  &__menu {
+    position: absolute;
+    top: 45px;
   }
 
   &__tickets {
@@ -119,6 +135,12 @@
   }
 
   &__button {
-    background-color: #1a5a4c;
+    background-color: $primary-color;
+  }
+
+  &__events {
+    position: absolute;
+    top: 535px;
+    left: -16px;
   }
 }
