--- a/src/styles/_heading.scss
+++ b/src/styles/_heading.scss
@@ -5,7 +5,7 @@
   font-weight: 700;
   font-size: 48px;
   line-height: 48px;
-  color: #0f0e08;
+  color: $color-for-additional-titles;
   white-space: nowrap;
 
   @media screen and (max-width: 1280px) {
