--- a/src/styles/_input.scss
+++ b/src/styles/_input.scss
@@ -11,7 +11,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 14px;
-  color: #687480;
+  color: $color-for-additional-text;
 
   @media screen and (max-width: 1200px) {
     width: 395px;
