--- a/src/styles/_lecture.scss
+++ b/src/styles/_lecture.scss
@@ -79,14 +79,14 @@
   &__label {
     font-weight: 500;
     line-height: 14px;
-    color: #687480;
+    color: $color-for-additional-text;
     text-transform: uppercase;
   }
 
   &__dates {
     font-weight: 700;
     line-height: 14px;
-    color: #1a5a4c;
+    color: $primary-color;
   }
 
   &__title {
@@ -96,7 +96,7 @@
     font-size: 36px;
     font-weight: 400;
     line-height: 36px;
-    color: #0f0e08;
+    color: $color-for-additional-titles;
 
     @media screen and (max-width: 613px) {
       padding-top: 15px;
