--- a/src/styles/_link.scss
+++ b/src/styles/_link.scss
@@ -1,10 +1,10 @@
 .link {
-  color: #0f0e08;
+  color: $color-for-additional-titles;
   text-decoration: none;
   transition: color 0.2s, font-weight 0.2s;
 
   &:hover {
-    color: #1a5a4c;
+    color: $primary-color;
     font-weight: 500;
   }
 }
