--- a/src/styles/_tickets.scss
+++ b/src/styles/_tickets.scss
@@ -12,12 +12,12 @@
     display: flex;
     justify-content: center;
   
-    border: 1px solid #1a5a4c;
+    border: 1px solid $primary-color;
     text-transform: uppercase;
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
-    color: #0f0e08;
+    color: $color-for-additional-titles;
   
     @media screen and (max-width: 613px) {
       width: 230px;
