--- a/src/styles/blocks/article.scss
+++ b/src/styles/blocks/article.scss
@@ -6,7 +6,7 @@
 
     font-size: 3rem;
     font-weight: 400;
-    color: #0f0e08;
+    color: $c-dark-gray;
 
     &::after {
       position: absolute;
@@ -17,7 +17,7 @@
       height: 12px;
 
       content: "";
-      background-color: #f14a27;
+      background-color: $c-red;
       transform: translate(-50%, -50%);
     }
   }
