--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -6,6 +6,12 @@
   &__item {
     margin-bottom: 20px;
     font-size: 1.17rem;
+
+    transition: transform 0.5s;
+
+    &:hover {
+      transform: translateX(2px);
+    }
   }
 
   &__link {
