--- a/src/styles/blocks/art.scss
+++ b/src/styles/blocks/art.scss
@@ -9,7 +9,7 @@
 
   &__transparant-title {
     -webkit-text-fill-color: transparent;
-    -webkit-text-stroke: 2px #000;
+    -webkit-text-stroke: 2px $c-black;
   }
 
   &__btn {
