--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -14,7 +14,7 @@
     &::placeholder {
       font-family: "Montserrat", sans-serif;
       font-size: 14px;
-      color: #687480;
+      color: $c-light-grey;
     }
 
     &:focus {
@@ -27,8 +27,9 @@
     width: 70px;
     height: 70px;
     border: 1px solid $c-red;
+    cursor: pointer;
 
-    color: #000;
+    color: $c-black;
     background-color: $c-red;
   }
 }
