--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -26,6 +26,10 @@
     background-position: bottom;
   }
 
+  &__menu {
+    top: 0;
+  }
+
   &__art {
     position: absolute;
     top: 235px;
@@ -48,7 +52,7 @@
       content: "";
       margin-bottom: 3px;
 
-      background-color: #000;
+      background-color: $c-black;
     }
   }
 
@@ -57,7 +61,7 @@
     bottom: 100px;
     left: 10%;
     font-size: 1rem;
-    color: #687480;
+    color: $c-light-grey;
 
     transform: rotate(-90deg);
 
@@ -74,7 +78,7 @@
       transform: rotate(-90deg);
     }
   }
-  
+
   &__toggler {
     position: absolute;
     opacity: 0;
