--- a/src/styles/blocks/romantism.scss
+++ b/src/styles/blocks/romantism.scss
@@ -22,7 +22,7 @@
     width: 570px;
     height: 204px;
 
-    background-color: #fff;
+    background-color: $c-white;
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
     transform: translate(-50%, -50%);
   }
