fixed pictures alt, menu

--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -30,7 +30,7 @@
     margin: 150px 130px 0;
     height: max-content;
 
-    transition: box-shadow 0.5s;
+    transition: box-shadow $anim-duration;
 
     &:hover {
       box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
