--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -27,6 +27,7 @@
   }
 
   &__menu {
+    position: absolute;
     top: 0;
   }
 
@@ -42,6 +43,7 @@
     left: 5%;
 
     z-index: 1;
+    cursor: pointer;
 
     & > .header__toggler-menu,
     &::before,
