--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,5 +1,4 @@
 .menu {
-  position: absolute;
   display: none;
   width: 100%;
   height: 100%;
@@ -22,7 +21,9 @@
     color: $c-white;
     text-decoration: none;
 
-    transition: all 0.5s;
+    transition: border-radius $anim-duration,
+      background-color $anim-duration,
+      padding $anim-duration;
 
     &:hover {
       padding: 10px;
