--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -7,7 +7,7 @@
     margin-bottom: 20px;
     font-size: 1.17rem;
 
-    transition: transform 0.5s;
+    transition: transform $anim-duration;
 
     &:hover {
       transform: translateX(2px);
