--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -6,6 +6,7 @@ $c-gray: #4e4e4e;
 $c-light-gray: #e0e0e0;
 $c-dark-gray: #0f0e08;
 $c-red: #f14a27;
+$anim-duration: 0.5s;
 $logo-width: 68px;
 $large-screem-breakpoint: 1200px;
 $medium-screen-breakpoint: 1100px;
