--- a/src/styles/blocks/pictures.scss
+++ b/src/styles/blocks/pictures.scss
@@ -18,7 +18,7 @@
     object-fit: cover;
     object-position: center;
 
-    transition: transform 0.5s;
+    transition: transform $anim-duration;
 
     &:hover {
       transform: scale(1.2);
