Added header and events blocks

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,24 @@
 @import "utils";
-@import "fonts";
+// @import "fonts";
 @import "typography";
+@import "reset";
 
-body {
-  background: $c-gray;
+@import "image";
+@import "logo";
+@import "nav";
+@import "hamburger";
+@import "arrow-button";
+@import "header";
+
+@import "container";
+@import "event";
+@import "section";
+
+@import "footer";
+
+html {
+  // set for paragraphs
+  @include font($defaultFont, $defaultSize, 
+  $defaultFontWieght, $defaultLineHeight);
+  
 }
