--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,14 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin font($fontFamily, $fontSize, $fontWeight, 
+$lineHeight: 1em, 
+$letterSpacing: 0) {
+  font-family: $fontFamily;
+  font-size: $fontSize;
+  font-style: normal;
+  font-weight: $fontWeight;
+  line-height: $lineHeight;
+  letter-spacing: $letterSpacing;
+}
