--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,28 @@
-$c-gray: #eee;
+$defaultFont: "IBM Plex Sans", sans-serif;
+$alternateFont: "Montserrat", sans-serif;
+
+$defaultSize: 16px;
+$defaultFontWieght: 300;
+$defaultLineHeight: 24px;
+
+$breakpoint1: 768px;
+$breakpoint2: 1280px;
+
+$hoverDuration: 0.3s;
+
+$greenColor: #1a5a4c;
+$grayColor: #687480;
+
+$smallArrowSize: 50px;
+$bigArrowSize: 70px;
+
+$menuWidth: 18px;
+$menuHeight: 12px;
+$menuSmallTop: 33px;
+$menuTop: 45px;
+$logoSmallTop: 9px;
+$logoTop: 15px;
+
+$leftSmallMargin: 18px;
+$leftMediumMargin: 37px;
+$leftBigMargin: 58px;
