Implemented events section

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,16 +3,28 @@
   right: 0;
   left: 0;
   top: 0;
-  margin-bottom: 20px;
+  
+
+  &--margin {
+    margin-bottom: 70px;
+    
+    @media screen and (min-width: $breakpoint1) {
+      margin-bottom: 90px;
+    }
+
+    @media screen and (min-width: $breakpoint2) {
+      margin-bottom: 200px;
+    }
+  }
 
   &__button {
-    box-sizing: con;
+    box-sizing: content-box;
     position: absolute;
     width: $menuWidth;
     height: $menuHeight;
     margin-top: $menuSmallTop;
     margin-left: $leftSmallMargin;
-    padding: 5px;
+    // padding: 5px;
     // display: none;
     color: red;
     background-image: url("../images/icons/menu.png");
@@ -62,13 +74,16 @@
 
   &__image {
     width: 100%;
+    margin-bottom: 20px;
 
     @media screen and (min-width: $breakpoint1) {
       width: 65%;
+      margin-bottom: 0;
     }
   
     @media screen and (min-width: $breakpoint2) {
       width: 65%;
+      margin-bottom: 0;
     }
     
     height: 100%;
