--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -4,8 +4,8 @@
   padding-left: $leftSmallMargin;
   padding-right: $leftSmallMargin;
 
-  &__title {
-    margin-bottom: 60px;
+  &--margin {
+    margin-bottom: 40px;
   }
 
   @media screen and (min-width: $breakpoint1) {
