--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -1,7 +1,7 @@
 .event {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
   margin-bottom: 60px;
 
   @media screen and (min-width: $breakpoint1) {
@@ -17,20 +17,69 @@
     }
   }
 
-  &__title {
+  &__image {
     width: 100%;
-    
-    @media screen and (min-width: $breakpoint2) {
-      width: 40%;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: $breakpoint1) {
+      width: 300px;
+      flex-grow: 1;
+      margin-bottom: 0;
     }
+  }
+
+  &__padding {
+    width: 130px;
+    flex-grow: 0;
+  }
+
+  &__description {
+    width: 100%;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: $breakpoint1) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      width: 300px;
+      flex-grow: 1;
+      margin-bottom: 0;
+    }
+     
+  }
+
+  &__details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: $breakpoint1) {
+      justify-content: flex-start;
+    }
+  }
+
+  &__type {
+    @include font($defaultFont, 14px, 500);
+    color: $grayColor;
+    padding-top: 1px;
+    margin-right: 26px;
+  }
+
+  &__date {
+    @include font($defaultFont, 14px, 700, 21px);
+    color: $greenColor;
+  }
+
+  &__title {
     margin-bottom: 30px;
   }
 
-  &__image {
+  &__content {
     width: 100%;
-
-    @media screen and (min-width: $breakpoint2) {
-      width: 50%;
+    @media screen and (min-width: $breakpoint1) {
+      max-width: 370px;
     }
   }
  
