--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,15 @@
 $c-gray: #eee;
+$monseratFontFamili: "Monserat", sans-serif;
+$monseratBoldFontFamili: "Monserat-Bold", sans-serif;
+$ubuntuFontFamili: "Ubuntu", sans-serif;
+$IBMPlexSansFontFamili: "IBMPlexSans", sans-serif;
+$IBMPlexSans-BoldFontFamili: "IBMPlexSans-Bold", sans-serif;
+
+$colorWhite: #fff;
+$colorDarkGreen: #1a5a4c;
+$colorDarkGray: #687480;
+$colorLithtBlack: #4e4e4e;
+$colorBlack: #0f0e08;
+$colorRed: #f14a27;
+
+$durarion: 300ms;
